package lapr2.pot.model;

class TaskExecution {
    
}
