@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String name
  -String NIF
}

class Collaborator {
  -String name
  -String email
}


class Freelancer {
  -String id
  -String name
  -String expertiseLevel
  -String email
  -String NIF
  -String IBAN
  -String address
  -String country
  }

class Task {
 -String id
 -String briefDescription
 -Integer timeDuration
 -Double costPerHour
 -String taskCategory
}

class TaskExecution {
 -Date endDate
 -Double delay
 -String workQualityDescription
}

class PaymentTransaction{
  -Date endDate
  -Double delay
  -String workQualityDescription
}

class ManagerOfOrganization {
  -String name
  -String email
}

class PaymentDay {
  -Date timeOfDay
  -Date dayOfMonth
}

Platform "1" -- "*" Organization : has registered >

Organization "1" -- "1" ManagerOfOrganization : has >
Organization "1" -- "1" Collaborator: has >
Organization "1" -- "*" Task: has >
Organization "1" -- "*" PaymentTransaction: has >

Collaborator "1" -- "1..*" PaymentTransaction: sees statistics about >

ManagerOfOrganization "1" -- "1..*" PaymentTransaction: sees statistics about >

PaymentTransaction "1" -- "1" Freelancer: is related to >
PaymentTransaction "1" -- "1" Task: is related to >


PaymentDay "1" -- "0..*" PaymentTransaction : is related to

@enduml
